...
    "action.ok" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "好"
...
            "state" : "translated",
            "value" : "球类"
          }
        }
      }
    },
    "content.discard" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Discard edits"
...
            "state" : "translated",
            "value" : "编辑动态"
          }
        }
      }
    },
    "content.keepDraft" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Keep draft"
...
            "state" : "translated",
            "value" : "将此次编辑保留？"
          }
        }
      }
    },
    "content.photo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Photo"
          }
...
            "state" : "translated",
            "value" : "照片"
          }
        }
      }
    },
    "content.removePhoto" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remove photo"
          }
...
    "entry.imageSaved" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Image saved to Photos."
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "图片已保存到相册。"
...
            "state" : "translated",
            "value" : "输入数量"
          }
        }
      }
    },
    "entry.saveImage" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save image"
...
            "state" : "translated",
            "value" : "保存图片"
          }
        }
      }
    },
    "entry.share" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Share"
          }
...
            "state" : "translated",
            "value" : "口号"
          }
        }
      }
    },
    "profile.nickname" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "KeepUpper"
...
            "value" : "Beijing"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "北京"
          }
        }
      }
    },
    "theme.city.2" : {
      "extractionState" : "stale",
...
